<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miyatu.mirror.activity.NewVolumeDate">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <ImageView
            android:id="@+id/iv_new_volume_data_back"
            style="@style/back"/>
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="新建量体数据"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#EDEDED"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_volume_data_input_name"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@color/default_white_black"
                android:layout_marginTop="27.5dp"
                />
            <EditText
                android:id="@+id/et_new_volume_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@null"
                android:hint="@string/new_volume_data_input_hint_name"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_volume_data_sex"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@color/default_white_black"
                android:layout_marginTop="27dp"
                />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="39dp"
                android:background="@null"
                android:orientation="horizontal">
                <RadioGroup
                    android:id="@+id/new_volume_radiogroup_sex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/new_volume_radio_sex_man"
                        android:layout_width="47dp"
                        android:layout_height="47dp"
                        android:background="@drawable/sex_man_secect"
                        android:button="@null"
                        android:checked="true"
                        android:tag="@string/registe_sexbirthday_radiobtn_man"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/new_volume_radiotext_sex_man"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        />
                    <RadioButton
                        android:id="@+id/new_volume_radio_sex_woman"
                        android:layout_width="47dp"
                        android:layout_height="47dp"
                        android:background="@drawable/sex_woman_select"
                        android:button="@null"
                        android:tag="@string/registe_sexbirthday_radiobtn_woman"
                        />
                    <TextView
                        android:id="@+id/new_volume_radiotext_sex_woman"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_volume_data_height"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@color/default_white_black"
                android:layout_marginTop="27dp"
                />
            <EditText
                android:inputType="number"
                android:id="@+id/et_new_volume_height"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@null"
                android:hint="@string/registe_heightweight_hint_height"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_volume_data_weight"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@color/default_white_black"
                android:layout_marginTop="27dp"
                />
            <EditText
                android:inputType="number"
                android:id="@+id/et_new_volume_weight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@null"
                android:hint="@string/registe_heightweight_hint_weight"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"></View>
            <Button
                android:id="@+id/btn_new_volume_data_save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@mipmap/login_btn_bg"
                android:text="@string/new_volume_data_save"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_marginTop="60dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>


</LinearLayout>