<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="14.5dp"
        android:layout_height="14.5dp"
        android:src="@mipmap/login_cancel"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="17.5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_title"
            android:gravity="center"
            android:textSize="23sp"
            android:textColor="#333333"
            android:layout_marginTop="111.5dp"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_account_pwd_btn_height"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/translucent"
            android:hint="@string/login_account"
            android:layout_gravity="center"
            android:paddingLeft="25.5dp"
            android:textSize="16sp"
            android:layout_marginTop="49.5dp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_account_pwd_btn_height"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/translucent"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:paddingLeft="25.5dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_account_pwd_btn_height"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@mipmap/login_btn_bg"
            android:text="@string/login_btnlogin"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_forgetpasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forgetpasswd"
                android:textSize="13sp"
                android:textColor="#999999"
                android:layout_marginTop="16.5dp"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@+id/view"
               />
            <TextView
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.5dp"
               android:layout_toLeftOf="@+id/tv_registe"/>
            <TextView
                android:id="@+id/tv_registe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_registe"
                android:textSize="13sp"
                android:textColor="#999999"
                android:layout_marginTop="16.5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/login_otherwayregiste"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@android:color/darker_gray"
                android:visibility="invisible"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal"
                android:visibility="invisible">
                <ImageView
                    android:id="@+id/iv_loginbywx"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login_wx"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                   />
                <ImageView
                    android:id="@+id/iv_loginbyzfb"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login_zfb"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                   />
                <ImageView
                    android:id="@+id/iv_loginbyqq"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/login_qq"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_agreement1"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_agreement2"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@android:color/holo_blue_bright"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>