<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        >
        <ImageView
            android:id="@+id/iv_registeinfo_back"
          style="@style/back" />
    </Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#EDEDED"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registe_info_name"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@color/default_white_black"
                android:layout_marginTop="118dp"
                />
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@null"
                android:hint="@string/registe_info_hint_name"
                android:layout_gravity="center"
                android:layout_marginTop="36dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray"></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registe_info_email"
                android:gravity="left"
                android:textSize="16sp"
                android:textColor="@color/default_white_black"
                android:layout_marginTop="54dp"
                />
            <EditText
                android:id="@+id/et_useremail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@null"
                android:hint="@string/registe_info_hint_email"
                android:layout_gravity="center"
                android:layout_marginTop="34.5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray">

            </View>
            <View
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/btn_registeinfo_nextstep"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_account_pwd_btn_height"
                android:background="@mipmap/login_btn_bg"
                android:text="@string/registe_btn_next_step"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_marginBottom="60dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>